tests/diagnostic_golden_cc/semantic_actual_type_mismatch.diag
error[CF3139]: passed REAL(4) to INTEGER(32)
  --> tests/diagnostic_golden_cc/semantic_actual_type_mismatch.f90:7:12
   = stage: semantic
   = help: see docs/errors.md#CF3139
  |
7 |   call foo(1.0)
  |            ^ actual argument conflicts here
  ::: tests/diagnostic_golden_cc\semantic_actual_type_mismatch.f90
  |
4 |       integer x
  |       ~~~ visible dummy declaration here
   = note: This diagnostic comes from the semantic procedure-call matcher, not from parser recovery.
   = help: Compare the visible procedure interface against the actual argument list and procedure kind.
